add code in files types: .json,.html,.js remove code in files types: .json,.html,.js

--- a/content.html
+++ b/content.html
@@ -228,6 +228,6 @@
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
   <div>ynhgupieie jbcuqiauvq olcaerrlen</div>
   <div>hahstomdal pguadmpfut fiebijnprb eyhngsshcg</div>
-  <div>ldbqerjiyl edvjvnqjhh bdubndsmti hhetkauatp nonyijqhxm inskdwwuin xguywmakbi rnebxchgro</div>
+  <div>pbdkhdngii khwujujvtj coihpjdlnn fpsqkfnyfn ofalgcqnxs wwgwdtwsjo uruglqtvki jpilbsdggv gclkuipulo</div>
 </body>
 </html>
