add code in files types: .json,.html,.js remove code in files types: .json,.html,.js

--- a/content.html
+++ b/content.html
@@ -267,6 +267,6 @@
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
   <div>ddlifylede</div>
   <div>nfubxfgned ulbqivdlvv bssnutctsq pxokmdecum</div>
-  <div>mbrwujmrkn cmwebeijdy tckynqwqwe otbwrxbtdt skyxtfjtam</div>
+  <div>foltknkiit qfhpmgbaju asldijgkky ffvucmgyab sdywqvtwtl crhnwgovbf ipatxslqid jdcvuglxac</div>
 </body>
 </html>
