add code in files types: .json,.html,.js remove code in files types: .json,.html,.js

--- a/content.html
+++ b/content.html
@@ -374,6 +374,6 @@
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>goehklxqww afxykbevun tsmrtgefca</div>
   <div>ndcmdlgyxs ntniqmnrex bpbwvyfemv ltnmncomsf inojgyqaiw</div>
-  <div>nkvnarnugu xdgbfdclim oqncvrfxdj rnexkjjywj</div>
+  <div>tsdpqopeff</div>
 </body>
 </html>
