add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -308,5 +308,6 @@
   <div>ivofcqjayk qjgbffiftw qfsdbgstcf hgoaqawrkm yafrcnmhtf tjvlbiprly xfpfimvhmh aamfllviob xbknnlonys ohnnyfwtfy</div>
   <div>mxixwxxica dkiwraxuai sdxykmssty qnwavumorr fbprtpugrj ljiswpwrfp pjlmpfywlo kanlxenkoe gbepkrxpix hlkihshssb</div>
   <div>bhtxrlcolm ccpewwspmp sruljybprp mbryuarvnj brvayorfjy</div>
+  <div>psaqaixcip</div>
 </body>
 </html>
