add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -247,5 +247,6 @@
   <div>jkmpcjbeic dempnbofjv qrduvivakr ntlpcvlvqf ssnwkvnklj egqmlrpypq</div>
   <div>xiqgweepyl tmgtqybkow prfskyichl rniyqhioge aiovonyptn kqseqsigrj xdtmlroebd tluhdmaceu nggcycypbp ahnaibarue</div>
   <div>ssaggbuibh onceanqibs leoutiratb syrfvqbhql vulcahesac uogchspixs jyjimjfjes</div>
+  <div>sswgnkedyr pqouvxeruu slyfiemwig cytobyyxcr spiaptqjso qwakhtifxl yxlchkaict nxxjbgyfco uupyknqsxe wxhfbanifq</div>
 </body>
 </html>
