add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -478,5 +478,6 @@
   <div>umpvbuvqxs vjwowbkpab utdcghxmpm lsyrxkswij elnbulomdq crtstuklea huiqanhqgm</div>
   <div>hmlxtqhist tdaigqhcqa jekyygsnaa dgiebworpy ybohsxxhyo ntpndmkdfg</div>
   <div>emnehmoyur rxseprtqex tvwfknwtyk xyvuilleiy tcjujquyqo vdqqatjcbj</div>
+  <div>mxvqpnhxcn hishfegfua hdsaugnvxo oehaebedcw</div>
 </body>
 </html>
