add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -375,5 +375,6 @@
   <div>goehklxqww afxykbevun tsmrtgefca</div>
   <div>ndcmdlgyxs ntniqmnrex bpbwvyfemv ltnmncomsf inojgyqaiw</div>
   <div>tsdpqopeff</div>
+  <div>dcpddhmlvq</div>
 </body>
 </html>
