add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -502,5 +502,6 @@
   <div>cjgqqcrdno yltpovqwtc cqiwyicaam hxuvgdggcl nvymtcjxpq</div>
   <div>keiorxdxkf ofhykqbouk wbhuinllos ddsfwkhlwx icohlxrikq pwsgdsktyg dhbpmsrivi mmymdqbjhh bcwmejoqwl</div>
   <div>yshhmkrpdn oivqqphicg ptrusnctje</div>
+  <div>mxkjldceil sqqoigjpss gptrymghmg</div>
 </body>
 </html>
