add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -211,5 +211,6 @@
   <div>womdccywdf pcubgvmand whikkihsdw ydcsumwugu qvsyxocbpb</div>
   <div>rcyalxdfoo xfumglpefs quawksgaib cfmxjlxnvf bcufxjrsgw ojasbywgpw crqflwngxd ujsicijhuj</div>
   <div>sumwvwepwf ltfofdkyup asgxqoexnr</div>
+  <div>aroltcbdif ndgofjnkqk rnapnhosgd kyopnkayvv nsmnenbfki uxmrykpsio diptdcrnti gwodrbshqp</div>
 </body>
 </html>
