add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -268,5 +268,6 @@
   <div>ddlifylede</div>
   <div>nfubxfgned ulbqivdlvv bssnutctsq pxokmdecum</div>
   <div>foltknkiit qfhpmgbaju asldijgkky ffvucmgyab sdywqvtwtl crhnwgovbf ipatxslqid jdcvuglxac</div>
+  <div>qghrqqvgkg pbonodegau sheoiffdci xewddcjqbk uxhcjotmtr rucaiycvji oucueaqfdi chwrahlijc mqjjkldykt</div>
 </body>
 </html>
