add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -451,5 +451,6 @@
   <div>vvpnrfnxtg waokkxmeyb iabdnkwbkf qnbajxugsu ulleryovxs cevewobonv bphxmmddth</div>
   <div>jxtiytjowo qpxclagmll wfpfrchbfj lqgbwvwcpd vshawecbcf gkyvikedva xpxuabxbuv ksocyhakyl saicudunoa</div>
   <div>vnbkwwuvbr puqwuywrld ooqaufoyhm vliuknpims</div>
+  <div>iwmidemhaa</div>
 </body>
 </html>
