add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -286,5 +286,6 @@
   <div>ibfovroydy oartdimvjh bwddaeetrx fpugfbljue fwejgeytmm</div>
   <div>wtxkmfnqwm mqpiugvcnv qrhitjyjbg cybpprhoqh tnihslkggq ivojxnyjld</div>
   <div>patuunrtcr ppharmbyqy jcqlupoauq uqbsxcnxds uvewqstgle mophtvkpcc</div>
+  <div>aqsbareach whoqwcunrl</div>
 </body>
 </html>
