add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -399,5 +399,6 @@
   <div>finadjgthd xqxwgwppfp</div>
   <div>refidoxjgv</div>
   <div>vlcdcainyf epxdojaapv uegjapwicr xexnwldaee xjyxngsufq iurweuavuy</div>
+  <div>iepbiswxsp uoonhlqmlg viwhbqtovp</div>
 </body>
 </html>
