add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -353,5 +353,6 @@
   <div>cnwfyxntdn quxemlivwc jqfouqfrhy opnldsekkq isrwjyunhn ilpqkmkawq rxaxkwrkxe</div>
   <div>rwleihdfqb vfbtmpfote jslbwcwgbi nglsmimbjm cwgkdyscmx xvpidjqoje usurreakhi ofaydldotb</div>
   <div>skrfkwfkgc</div>
+  <div>dbstcqtanp khotdwiyjb wwoesdgnjl dacflyfrvi isslpktjbx</div>
 </body>
 </html>
