add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -424,5 +424,6 @@
   <div>csmpirsrqw ulrmiveuke pilnfsacku dmeykxcrvi tyckxaltjx jaefsmcrje</div>
   <div>anpwrtglxx oiokafpivx mvbpqtnwox sunufygbkh qtmhqybpio udrptfseou yiqfaergxv nxkcjonjxb wpfammdoqm jfwsugohxg</div>
   <div>sgmorxvsva tpsoldbdkm</div>
+  <div>nqoynudeal srdawafvcp ytdtnftdcn ronvpyslul uwltilkmjy dkelyvoldq hhokffxjhb</div>
 </body>
 </html>
