add code in files types: .html,.js,.xml remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -329,5 +329,6 @@
   <div>ecagljhybi qojnokehmf dcrhdebodv egvlmkvpha woefjiqflv rvgdyqkcyc</div>
   <div>huuphycssl scuiyjeumv cxpnuseyti pdfkxrwncy fnqvvodiph ophjuwldyu bwtdocshvq glipkqrbrn</div>
   <div>aojvdhxaob ousskqcqmm wxggkoaggu hurgslknwg pwerrfnejh ciowugaveb lcimilihkb</div>
+  <div>qjvoenbtum poegechlku awjbsbyufq uyliiofylg bjeoyebmmj vpmjkrudvx cgvvpvcgra abjxybrjur</div>
 </body>
 </html>
