add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -400,5 +400,6 @@
   <div>refidoxjgv</div>
   <div>vlcdcainyf epxdojaapv uegjapwicr xexnwldaee xjyxngsufq iurweuavuy</div>
   <div>iepbiswxsp uoonhlqmlg viwhbqtovp</div>
+  <div>pskkcydljh ybikwxwgyb qkbpjhorgo rpwcweoibg</div>
 </body>
 </html>
