add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -376,5 +376,6 @@
   <div>ndcmdlgyxs ntniqmnrex bpbwvyfemv ltnmncomsf inojgyqaiw</div>
   <div>tsdpqopeff</div>
   <div>dcpddhmlvq</div>
+  <div>jljlblbgcb</div>
 </body>
 </html>
