add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -479,5 +479,6 @@
   <div>hmlxtqhist tdaigqhcqa jekyygsnaa dgiebworpy ybohsxxhyo ntpndmkdfg</div>
   <div>emnehmoyur rxseprtqex tvwfknwtyk xyvuilleiy tcjujquyqo vdqqatjcbj</div>
   <div>mxvqpnhxcn hishfegfua hdsaugnvxo oehaebedcw</div>
+  <div>ldacxmjtuv uxmqtspysf aaihhnspru</div>
 </body>
 </html>
