add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -269,5 +269,6 @@
   <div>nfubxfgned ulbqivdlvv bssnutctsq pxokmdecum</div>
   <div>foltknkiit qfhpmgbaju asldijgkky ffvucmgyab sdywqvtwtl crhnwgovbf ipatxslqid jdcvuglxac</div>
   <div>qghrqqvgkg pbonodegau sheoiffdci xewddcjqbk uxhcjotmtr rucaiycvji oucueaqfdi chwrahlijc mqjjkldykt</div>
+  <div>buvxwunwcl ciuvablrqb lmmdiuugjx ortvbmplsg tprccnlaog wytvhbjpep dxyqchqvno lagqrmcrth ckosfwpbkq</div>
 </body>
 </html>
