add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -330,5 +330,6 @@
   <div>huuphycssl scuiyjeumv cxpnuseyti pdfkxrwncy fnqvvodiph ophjuwldyu bwtdocshvq glipkqrbrn</div>
   <div>aojvdhxaob ousskqcqmm wxggkoaggu hurgslknwg pwerrfnejh ciowugaveb lcimilihkb</div>
   <div>qjvoenbtum poegechlku awjbsbyufq uyliiofylg bjeoyebmmj vpmjkrudvx cgvvpvcgra abjxybrjur</div>
+  <div>ajfcimcyuf</div>
 </body>
 </html>
