add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -452,5 +452,6 @@
   <div>jxtiytjowo qpxclagmll wfpfrchbfj lqgbwvwcpd vshawecbcf gkyvikedva xpxuabxbuv ksocyhakyl saicudunoa</div>
   <div>vnbkwwuvbr puqwuywrld ooqaufoyhm vliuknpims</div>
   <div>iwmidemhaa</div>
+  <div>ynhataduxp fevjnecsga</div>
 </body>
 </html>
