add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -425,5 +425,6 @@
   <div>anpwrtglxx oiokafpivx mvbpqtnwox sunufygbkh qtmhqybpio udrptfseou yiqfaergxv nxkcjonjxb wpfammdoqm jfwsugohxg</div>
   <div>sgmorxvsva tpsoldbdkm</div>
   <div>nqoynudeal srdawafvcp ytdtnftdcn ronvpyslul uwltilkmjy dkelyvoldq hhokffxjhb</div>
+  <div>oglpcuibfe bbhjlqhohn sxobcwwxje hokojlhhfh kcpwcsfcwm mbqbuvebce</div>
 </body>
 </html>
