add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -230,5 +230,6 @@
   <div>hahstomdal pguadmpfut fiebijnprb eyhngsshcg</div>
   <div>pbdkhdngii khwujujvtj coihpjdlnn fpsqkfnyfn ofalgcqnxs wwgwdtwsjo uruglqtvki jpilbsdggv gclkuipulo</div>
   <div>deydudhxnv gablagkyxs iyuyqrjyyl vbqgqnrhll srrkgkjenn qmmmllcjoo</div>
+  <div>ujqtlausjw wowkhoaupl bsruvrgvyw plgohjdkwd</div>
 </body>
 </html>
