add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -503,6 +503,6 @@
   <div>keiorxdxkf ofhykqbouk wbhuinllos ddsfwkhlwx icohlxrikq pwsgdsktyg dhbpmsrivi mmymdqbjhh bcwmejoqwl</div>
   <div>yshhmkrpdn oivqqphicg ptrusnctje</div>
   <div>mxkjldceil sqqoigjpss gptrymghmg</div>
-  <div>sgibhblhtu loqkpliadk mbjgoqwhfy neehywhixc ntoakbbbpo rbkdvhgfpo posupjqnbk yeohhlyeld hnptkpreuy fungamomcm</div>
+  <div>jgslpyhsba hemtqmpaxj bsimftnvhr</div>
 </body>
 </html>
