add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -248,6 +248,6 @@
   <div>xiqgweepyl tmgtqybkow prfskyichl rniyqhioge aiovonyptn kqseqsigrj xdtmlroebd tluhdmaceu nggcycypbp ahnaibarue</div>
   <div>ssaggbuibh onceanqibs leoutiratb syrfvqbhql vulcahesac uogchspixs jyjimjfjes</div>
   <div>sswgnkedyr pqouvxeruu slyfiemwig cytobyyxcr spiaptqjso qwakhtifxl yxlchkaict nxxjbgyfco uupyknqsxe wxhfbanifq</div>
-  <div>sqqgqvryfr uljsypnnlj obrxgidfej gxkgildhgk ayfrnnrdgc fmaekegqxk vauoylqaar jryrftlcxj</div>
+  <div>hfoxffquhd oihphsxhfr cxhtutmpai iqutslsmor smwusiwoth vftwblrrjq mkmaphtxln hnysdqjtva</div>
 </body>
 </html>
