add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -400,6 +400,6 @@
   <div>refidoxjgv</div>
   <div>vlcdcainyf epxdojaapv uegjapwicr xexnwldaee xjyxngsufq iurweuavuy</div>
   <div>iepbiswxsp uoonhlqmlg viwhbqtovp</div>
-  <div>pskkcydljh ybikwxwgyb qkbpjhorgo rpwcweoibg</div>
+  <div>yylmbgtvie jwsxeagcso ecjjikgtcm rwsqvejfap rbqbqhhsga goobecqpsp rxfnwjyoyt dkgmyqmyfm gljrtwtnnt</div>
 </body>
 </html>
