add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -212,6 +212,6 @@
   <div>rcyalxdfoo xfumglpefs quawksgaib cfmxjlxnvf bcufxjrsgw ojasbywgpw crqflwngxd ujsicijhuj</div>
   <div>sumwvwepwf ltfofdkyup asgxqoexnr</div>
   <div>aroltcbdif ndgofjnkqk rnapnhosgd kyopnkayvv nsmnenbfki uxmrykpsio diptdcrnti gwodrbshqp</div>
-  <div>xccrhuovfh dwlmmabokn rbwnwmybmp qgwlcdeigd ibctlvvwpj bsjsdwfkmj xvfmuewchs wrxatmvyoh eedmgjflak</div>
+  <div>dhrceodwwu ubfaudnwjt pbwdgplcup guhodhdijr veinntnhwc ikxjogpmgh iylhmebmvh aqfcaerddl</div>
 </body>
 </html>
