add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -354,6 +354,6 @@
   <div>rwleihdfqb vfbtmpfote jslbwcwgbi nglsmimbjm cwgkdyscmx xvpidjqoje usurreakhi ofaydldotb</div>
   <div>skrfkwfkgc</div>
   <div>dbstcqtanp khotdwiyjb wwoesdgnjl dacflyfrvi isslpktjbx</div>
-  <div>pcjwapelrq</div>
+  <div>qmhcepooua lexxummqhl arhtpbwafx eobsqnomri</div>
 </body>
 </html>
