add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -479,6 +479,6 @@
   <div>hmlxtqhist tdaigqhcqa jekyygsnaa dgiebworpy ybohsxxhyo ntpndmkdfg</div>
   <div>emnehmoyur rxseprtqex tvwfknwtyk xyvuilleiy tcjujquyqo vdqqatjcbj</div>
   <div>mxvqpnhxcn hishfegfua hdsaugnvxo oehaebedcw</div>
-  <div>ldacxmjtuv uxmqtspysf aaihhnspru</div>
+  <div>redqkbcbyp peoxtgguqd ffhbuhnlun fjjdhoqfpb bkexkhertt codhyuqlrw yyujuhwoqw rbftxmpjwm jjaacvdejy mjmdmiaekg</div>
 </body>
 </html>
