add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -287,6 +287,6 @@
   <div>wtxkmfnqwm mqpiugvcnv qrhitjyjbg cybpprhoqh tnihslkggq ivojxnyjld</div>
   <div>patuunrtcr ppharmbyqy jcqlupoauq uqbsxcnxds uvewqstgle mophtvkpcc</div>
   <div>aqsbareach whoqwcunrl</div>
-  <div>jvhfyoqmyx icvvtvthux</div>
+  <div>ygxswjpqol ivloanxeac mpmakkcedr</div>
 </body>
 </html>
