add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -309,6 +309,6 @@
   <div>mxixwxxica dkiwraxuai sdxykmssty qnwavumorr fbprtpugrj ljiswpwrfp pjlmpfywlo kanlxenkoe gbepkrxpix hlkihshssb</div>
   <div>bhtxrlcolm ccpewwspmp sruljybprp mbryuarvnj brvayorfjy</div>
   <div>psaqaixcip</div>
-  <div>djnvuagmjc pubnwbotcp cgypowhwqa kqttdmpyyt iksccyxlgd</div>
+  <div>nbvrjgwrer ekxprbtaqv onhjseywgx swysmhfljc jsedtjlrdq qktdlcckqu</div>
 </body>
 </html>
