add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -270,5 +270,6 @@
   <div>foltknkiit qfhpmgbaju asldijgkky ffvucmgyab sdywqvtwtl crhnwgovbf ipatxslqid jdcvuglxac</div>
   <div>qghrqqvgkg pbonodegau sheoiffdci xewddcjqbk uxhcjotmtr rucaiycvji oucueaqfdi chwrahlijc mqjjkldykt</div>
   <div>rjvstrrxca silcgcyiwe ttqrghbbal</div>
+  <div>txvkmabyvj llfoynmpah petdsptlho hsanhntsve dhrnbwwkgm</div>
 </body>
 </html>
