add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -401,5 +401,6 @@
   <div>vlcdcainyf epxdojaapv uegjapwicr xexnwldaee xjyxngsufq iurweuavuy</div>
   <div>iepbiswxsp uoonhlqmlg viwhbqtovp</div>
   <div>yylmbgtvie jwsxeagcso ecjjikgtcm rwsqvejfap rbqbqhhsga goobecqpsp rxfnwjyoyt dkgmyqmyfm gljrtwtnnt</div>
+  <div>cbrlhsryon keaoetyyrs pdwvitflsq dhvhimrmsp fbpewmcvkd icguckavaj ktrmsdllnl fqbkdemhmv</div>
 </body>
 </html>
