add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -504,5 +504,6 @@
   <div>yshhmkrpdn oivqqphicg ptrusnctje</div>
   <div>mxkjldceil sqqoigjpss gptrymghmg</div>
   <div>jgslpyhsba hemtqmpaxj bsimftnvhr</div>
+  <div>nykqbghuic qsxvjbnjtp iirrfauhpq jhaaoiktuj akstpkmodk</div>
 </body>
 </html>
