add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -426,5 +426,6 @@
   <div>sgmorxvsva tpsoldbdkm</div>
   <div>nqoynudeal srdawafvcp ytdtnftdcn ronvpyslul uwltilkmjy dkelyvoldq hhokffxjhb</div>
   <div>bwedxxdgan icvqxlisfg</div>
+  <div>eebplljdew fpdkxbakdc gegvqnravm laelspvcdj bwphemnaid vbrteionml nbmcofvjih rawostbauc kqvrwukqou</div>
 </body>
 </html>
