add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -310,5 +310,6 @@
   <div>bhtxrlcolm ccpewwspmp sruljybprp mbryuarvnj brvayorfjy</div>
   <div>psaqaixcip</div>
   <div>nbvrjgwrer ekxprbtaqv onhjseywgx swysmhfljc jsedtjlrdq qktdlcckqu</div>
+  <div>yymowrgvhy jqxngvosbt lmoocwciij daomrfbwxt</div>
 </body>
 </html>
