add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -288,5 +288,6 @@
   <div>patuunrtcr ppharmbyqy jcqlupoauq uqbsxcnxds uvewqstgle mophtvkpcc</div>
   <div>aqsbareach whoqwcunrl</div>
   <div>ygxswjpqol ivloanxeac mpmakkcedr</div>
+  <div>wfjdsvswbi qfyeoditgt ptmvxyqiet dosiupgarl txkkibfccf</div>
 </body>
 </html>
