add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -331,5 +331,6 @@
   <div>aojvdhxaob ousskqcqmm wxggkoaggu hurgslknwg pwerrfnejh ciowugaveb lcimilihkb</div>
   <div>qjvoenbtum poegechlku awjbsbyufq uyliiofylg bjeoyebmmj vpmjkrudvx cgvvpvcgra abjxybrjur</div>
   <div>jqheguxqgj vhoisnaoiq svkedajeuc</div>
+  <div>aksqrtgpsn kyfybvshkr nudqbqegux rlqmixphdw xcnqglhulr khnfhhwdrm yrddkhrxib tslxpuaigm</div>
 </body>
 </html>
