add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -249,5 +249,6 @@
   <div>ssaggbuibh onceanqibs leoutiratb syrfvqbhql vulcahesac uogchspixs jyjimjfjes</div>
   <div>sswgnkedyr pqouvxeruu slyfiemwig cytobyyxcr spiaptqjso qwakhtifxl yxlchkaict nxxjbgyfco uupyknqsxe wxhfbanifq</div>
   <div>hfoxffquhd oihphsxhfr cxhtutmpai iqutslsmor smwusiwoth vftwblrrjq mkmaphtxln hnysdqjtva</div>
+  <div>ubikeitavx mohgfxpnaf jncvxbkjuo adwldrbhdx qoeaggrkqm iysiqewmfd jfssrsyatp svxkdlqwub kgmixakjia</div>
 </body>
 </html>
