add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -377,5 +377,6 @@
   <div>tsdpqopeff</div>
   <div>dcpddhmlvq</div>
   <div>rlsadrfrud oxwjhikvua hjrjgatdtn</div>
+  <div>kuuduspiyy pwcxtafupv</div>
 </body>
 </html>
