add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -453,5 +453,6 @@
   <div>vnbkwwuvbr puqwuywrld ooqaufoyhm vliuknpims</div>
   <div>iwmidemhaa</div>
   <div>lccepjikjq vmqfeeoyth dgbltclqin</div>
+  <div>lsrhkqyvbd klanguaxsu ierwjxocpw</div>
 </body>
 </html>
