add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -213,5 +213,6 @@
   <div>sumwvwepwf ltfofdkyup asgxqoexnr</div>
   <div>aroltcbdif ndgofjnkqk rnapnhosgd kyopnkayvv nsmnenbfki uxmrykpsio diptdcrnti gwodrbshqp</div>
   <div>dhrceodwwu ubfaudnwjt pbwdgplcup guhodhdijr veinntnhwc ikxjogpmgh iylhmebmvh aqfcaerddl</div>
+  <div>hwbfwrubjl efnslvielp lyfnmcmlby glakedvgmk hraxscxtwg wwtvvmgckt kiyueprooe</div>
 </body>
 </html>
