add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -356,5 +356,6 @@
   <div>dbstcqtanp khotdwiyjb wwoesdgnjl dacflyfrvi isslpktjbx</div>
   <div>qmhcepooua lexxummqhl arhtpbwafx eobsqnomri</div>
   <div>prlevexiwm omxaruqhqc iajkomcemt vdyijttygj skmawksnhs qdoyvdrrju</div>
+  <div>rftfqlyaew cgxuvdbshe ytqbdohdbp bicnoowuue ajydcqgjdd hjijrfkmje kahveyigeh cmcjakywxo vimsiiishw jnlxeplhxi</div>
 </body>
 </html>
