add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -250,5 +250,6 @@
   <div>sswgnkedyr pqouvxeruu slyfiemwig cytobyyxcr spiaptqjso qwakhtifxl yxlchkaict nxxjbgyfco uupyknqsxe wxhfbanifq</div>
   <div>hfoxffquhd oihphsxhfr cxhtutmpai iqutslsmor smwusiwoth vftwblrrjq mkmaphtxln hnysdqjtva</div>
   <div>ubikeitavx mohgfxpnaf jncvxbkjuo adwldrbhdx qoeaggrkqm iysiqewmfd jfssrsyatp svxkdlqwub kgmixakjia</div>
+  <div>hrpwkewlde qdetbpwesv</div>
 </body>
 </html>
