add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -271,5 +271,6 @@
   <div>qghrqqvgkg pbonodegau sheoiffdci xewddcjqbk uxhcjotmtr rucaiycvji oucueaqfdi chwrahlijc mqjjkldykt</div>
   <div>rjvstrrxca silcgcyiwe ttqrghbbal</div>
   <div>txvkmabyvj llfoynmpah petdsptlho hsanhntsve dhrnbwwkgm</div>
+  <div>vxnqvhvpwt rjcqurpmym chpsvajgmt</div>
 </body>
 </html>
