add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -481,5 +481,6 @@
   <div>mxvqpnhxcn hishfegfua hdsaugnvxo oehaebedcw</div>
   <div>redqkbcbyp peoxtgguqd ffhbuhnlun fjjdhoqfpb bkexkhertt codhyuqlrw yyujuhwoqw rbftxmpjwm jjaacvdejy mjmdmiaekg</div>
   <div>rtnwhednex pstacxjvpc ixhbjpujrs lcfltalths ohnwfivvua cynwfxwyfl gpemjvrwfm</div>
+  <div>csgnxnuksq lrolylvvnw ndqblbrxnu rtjahrwtmx ullhwdfmqo qtyjfcqjlr yxigloajef</div>
 </body>
 </html>
