add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -289,5 +289,6 @@
   <div>aqsbareach whoqwcunrl</div>
   <div>ygxswjpqol ivloanxeac mpmakkcedr</div>
   <div>wfjdsvswbi qfyeoditgt ptmvxyqiet dosiupgarl txkkibfccf</div>
+  <div>vbbcbiepaj phajbovdbs trouypigeh urojosepxn</div>
 </body>
 </html>
