add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -505,5 +505,6 @@
   <div>mxkjldceil sqqoigjpss gptrymghmg</div>
   <div>jgslpyhsba hemtqmpaxj bsimftnvhr</div>
   <div>nykqbghuic qsxvjbnjtp iirrfauhpq jhaaoiktuj akstpkmodk</div>
+  <div>vhehbmhlru mjrjcixeek lpelvkvega</div>
 </body>
 </html>
