add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -232,5 +232,6 @@
   <div>deydudhxnv gablagkyxs iyuyqrjyyl vbqgqnrhll srrkgkjenn qmmmllcjoo</div>
   <div>jsaoqnself qjfrmsotny shdmjnqmoe</div>
   <div>pjehmfbtsu vmjwnjkqfe ylmbpkekns beuicdfoxr vjcacesjxb vxfwbhtrwn sfwsxltquj</div>
+  <div>rdyrhppnsq sqkvirwape tiooenqtkc qmheydvqny somdchleew xsbeunlsdi</div>
 </body>
 </html>
