add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -332,5 +332,6 @@
   <div>qjvoenbtum poegechlku awjbsbyufq uyliiofylg bjeoyebmmj vpmjkrudvx cgvvpvcgra abjxybrjur</div>
   <div>jqheguxqgj vhoisnaoiq svkedajeuc</div>
   <div>aksqrtgpsn kyfybvshkr nudqbqegux rlqmixphdw xcnqglhulr khnfhhwdrm yrddkhrxib tslxpuaigm</div>
+  <div>ihsraelqve</div>
 </body>
 </html>
