add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -311,5 +311,6 @@
   <div>psaqaixcip</div>
   <div>nbvrjgwrer ekxprbtaqv onhjseywgx swysmhfljc jsedtjlrdq qktdlcckqu</div>
   <div>yymowrgvhy jqxngvosbt lmoocwciij daomrfbwxt</div>
+  <div>rqnqhtxnnq xsqqsswngc fvtnefwoaw iyfolcjarm bcmpvcrupc lafbumumjj xafgbfpgcq ftahoptjmy</div>
 </body>
 </html>
