add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -402,5 +402,6 @@
   <div>iepbiswxsp uoonhlqmlg viwhbqtovp</div>
   <div>yylmbgtvie jwsxeagcso ecjjikgtcm rwsqvejfap rbqbqhhsga goobecqpsp rxfnwjyoyt dkgmyqmyfm gljrtwtnnt</div>
   <div>cbrlhsryon keaoetyyrs pdwvitflsq dhvhimrmsp fbpewmcvkd icguckavaj ktrmsdllnl fqbkdemhmv</div>
+  <div>mbvkjldvqo fxsjaeiofs hdcyvweomw dxptkxprmn</div>
 </body>
 </html>
