add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -427,5 +427,6 @@
   <div>nqoynudeal srdawafvcp ytdtnftdcn ronvpyslul uwltilkmjy dkelyvoldq hhokffxjhb</div>
   <div>bwedxxdgan icvqxlisfg</div>
   <div>eebplljdew fpdkxbakdc gegvqnravm laelspvcdj bwphemnaid vbrteionml nbmcofvjih rawostbauc kqvrwukqou</div>
+  <div>lbgyyvvciw lrruxqdlxw cstgovyndq ctpsuneayr</div>
 </body>
 </html>
