add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -378,5 +378,6 @@
   <div>dcpddhmlvq</div>
   <div>rlsadrfrud oxwjhikvua hjrjgatdtn</div>
   <div>kuuduspiyy pwcxtafupv</div>
+  <div>swpkixrykl koplymwlpa hskokaxijh rexuvjybsv dclpvsawtl hksmynltrt hrsmonakmi</div>
 </body>
 </html>
