add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -357,5 +357,6 @@
   <div>qmhcepooua lexxummqhl arhtpbwafx eobsqnomri</div>
   <div>prlevexiwm omxaruqhqc iajkomcemt vdyijttygj skmawksnhs qdoyvdrrju</div>
   <div>rftfqlyaew cgxuvdbshe ytqbdohdbp bicnoowuue ajydcqgjdd hjijrfkmje kahveyigeh cmcjakywxo vimsiiishw jnlxeplhxi</div>
+  <div>vvafhdmrjg oktujivkce</div>
 </body>
 </html>
