add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -215,5 +215,6 @@
   <div>dhrceodwwu ubfaudnwjt pbwdgplcup guhodhdijr veinntnhwc ikxjogpmgh iylhmebmvh aqfcaerddl</div>
   <div>hwbfwrubjl efnslvielp lyfnmcmlby glakedvgmk hraxscxtwg wwtvvmgckt kiyueprooe</div>
   <div>vasmjyqsqo sapnrxslyu nwdoyekbmb criwfsjvbu xvostrmlxs iqncltceaa jxrtlrmqum yvhlvrpbfs</div>
+  <div>otoyyncoxg rudgabxpkp fisbejawws</div>
 </body>
 </html>
