add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -290,5 +290,6 @@
   <div>ygxswjpqol ivloanxeac mpmakkcedr</div>
   <div>wfjdsvswbi qfyeoditgt ptmvxyqiet dosiupgarl txkkibfccf</div>
   <div>vbbcbiepaj phajbovdbs trouypigeh urojosepxn</div>
+  <div>fdngtxuxqq nicyelhlkr ymixtirohh fastqseevh jjdnstlntp dliafhiaqn</div>
 </body>
 </html>
