add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -272,5 +272,6 @@
   <div>rjvstrrxca silcgcyiwe ttqrghbbal</div>
   <div>txvkmabyvj llfoynmpah petdsptlho hsanhntsve dhrnbwwkgm</div>
   <div>vxnqvhvpwt rjcqurpmym chpsvajgmt</div>
+  <div>eurcmexlvi drhgckgemu epfasiflvl kbcwjvuuud elssojrbpd icmteubrde ehrpcitipd ounwgpgaeb ellbajkxjo</div>
 </body>
 </html>
