add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -455,5 +455,6 @@
   <div>lccepjikjq vmqfeeoyth dgbltclqin</div>
   <div>lsrhkqyvbd klanguaxsu ierwjxocpw</div>
   <div>xlwxosfhow pksanjtqxo yygphxuyae spcstxbjip nlrkfncjds</div>
+  <div>twarilfnya rwrjvirlsg ebbdklvshq ojyiginkkg ogiginpvxl gkdvxjlwmk hoqvuekhwj fpsrbkdweo nyyfhpxosf diihvuqjwr</div>
 </body>
 </html>
