add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -506,5 +506,6 @@
   <div>jgslpyhsba hemtqmpaxj bsimftnvhr</div>
   <div>nykqbghuic qsxvjbnjtp iirrfauhpq jhaaoiktuj akstpkmodk</div>
   <div>vhehbmhlru mjrjcixeek lpelvkvega</div>
+  <div>xlqvoogcce vdogbqhvtv</div>
 </body>
 </html>
