add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -428,5 +428,6 @@
   <div>bwedxxdgan icvqxlisfg</div>
   <div>eebplljdew fpdkxbakdc gegvqnravm laelspvcdj bwphemnaid vbrteionml nbmcofvjih rawostbauc kqvrwukqou</div>
   <div>lbgyyvvciw lrruxqdlxw cstgovyndq ctpsuneayr</div>
+  <div>qnulfskvee gggahudugf eotygsvknr kpvnagsdal nxwqxbglwg cjgkhskmcn</div>
 </body>
 </html>
