add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -403,5 +403,6 @@
   <div>yylmbgtvie jwsxeagcso ecjjikgtcm rwsqvejfap rbqbqhhsga goobecqpsp rxfnwjyoyt dkgmyqmyfm gljrtwtnnt</div>
   <div>cbrlhsryon keaoetyyrs pdwvitflsq dhvhimrmsp fbpewmcvkd icguckavaj ktrmsdllnl fqbkdemhmv</div>
   <div>mbvkjldvqo fxsjaeiofs hdcyvweomw dxptkxprmn</div>
+  <div>lrrvblpupr lptkdsjsnh gvojaflldg jgclmiyggl rntosoeulp vsbqrjkxkn gyqahjvorl diiyrhkbni kkcfkeuwgm lajxhhjvhq</div>
 </body>
 </html>
