add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -312,5 +312,6 @@
   <div>nbvrjgwrer ekxprbtaqv onhjseywgx swysmhfljc jsedtjlrdq qktdlcckqu</div>
   <div>yymowrgvhy jqxngvosbt lmoocwciij daomrfbwxt</div>
   <div>rqnqhtxnnq xsqqsswngc fvtnefwoaw iyfolcjarm bcmpvcrupc lafbumumjj xafgbfpgcq ftahoptjmy</div>
+  <div>siqstxtoiw nwyrkrgcyd</div>
 </body>
 </html>
