add code in files types: .html,.js,.xml remove code in files types: .xml

--- a/content.html
+++ b/content.html
@@ -482,5 +482,6 @@
   <div>redqkbcbyp peoxtgguqd ffhbuhnlun fjjdhoqfpb bkexkhertt codhyuqlrw yyujuhwoqw rbftxmpjwm jjaacvdejy mjmdmiaekg</div>
   <div>rtnwhednex pstacxjvpc ixhbjpujrs lcfltalths ohnwfivvua cynwfxwyfl gpemjvrwfm</div>
   <div>csgnxnuksq lrolylvvnw ndqblbrxnu rtjahrwtmx ullhwdfmqo qtyjfcqjlr yxigloajef</div>
+  <div>mhsvdevxnp oxaoxtqfhp jynwxlojjc bisqgjfcas sastblovkj</div>
 </body>
 </html>
