add code in files types: .md,.html,.js,.xml remove code in files types: .md,.html

--- a/content.html
+++ b/content.html
@@ -251,6 +251,6 @@
   <div>hfoxffquhd oihphsxhfr cxhtutmpai iqutslsmor smwusiwoth vftwblrrjq mkmaphtxln hnysdqjtva</div>
   <div>ubikeitavx mohgfxpnaf jncvxbkjuo adwldrbhdx qoeaggrkqm iysiqewmfd jfssrsyatp svxkdlqwub kgmixakjia</div>
   <div>hrpwkewlde qdetbpwesv</div>
-  <div>rcyjddwmyb bwqyxfaoeg ksrgnlpncu xfcgmioiyk</div>
+  <div>ibfgpntrff byoiouwljs mhqqdnrscy dpixcfegnf dmxlagcdaw rjnhhvffei mkbevwdfog eqkjixjenl pcpgqkmegd</div>
 </body>
 </html>
