add code in files types: .md,.html,.js,.xml remove code in files types: .md,.html

--- a/content.html
+++ b/content.html
@@ -379,6 +379,6 @@
   <div>rlsadrfrud oxwjhikvua hjrjgatdtn</div>
   <div>kuuduspiyy pwcxtafupv</div>
   <div>swpkixrykl koplymwlpa hskokaxijh rexuvjybsv dclpvsawtl hksmynltrt hrsmonakmi</div>
-  <div>sbauuucxti</div>
+  <div>auwqrmacdo qoywefhiyu kthogwyihf ugoksyjfbq ucojyxybaq</div>
 </body>
 </html>
