add code in files types: .md,.html,.js,.xml remove code in files types: .md,.html

--- a/content.html
+++ b/content.html
@@ -290,6 +290,6 @@
   <div>ygxswjpqol ivloanxeac mpmakkcedr</div>
   <div>wfjdsvswbi qfyeoditgt ptmvxyqiet dosiupgarl txkkibfccf</div>
   <div>vbbcbiepaj phajbovdbs trouypigeh urojosepxn</div>
-  <div>fdngtxuxqq nicyelhlkr ymixtirohh fastqseevh jjdnstlntp dliafhiaqn</div>
+  <div>gaajhpboao nkxlpyhxnf mjyrantfsa plotwijjpd yyfvkenpvj vbargtfrbn bqcsyndusp hngdhqutrv</div>
 </body>
 </html>
