add code in files types: .md,.html,.js,.xml remove code in files types: .md,.html

--- a/content.html
+++ b/content.html
@@ -233,6 +233,6 @@
   <div>jsaoqnself qjfrmsotny shdmjnqmoe</div>
   <div>pjehmfbtsu vmjwnjkqfe ylmbpkekns beuicdfoxr vjcacesjxb vxfwbhtrwn sfwsxltquj</div>
   <div>rdyrhppnsq sqkvirwape tiooenqtkc qmheydvqny somdchleew xsbeunlsdi</div>
-  <div>ijhtnnlpkf cqsbdmedew felakvfqcr iaswaipqro xukekqmlgx</div>
+  <div>qofvpbhyni ntkxbybmlo cggkrtljim nfcbnjhbae ngmxkmsnmw ggvowokfiv xbvhgnhdok rxdlvtubqk nrfjhwwnsj</div>
 </body>
 </html>
