add code in files types: .md,.html,.js,.xml remove code in files types: .md,.html

--- a/content.html
+++ b/content.html
@@ -333,6 +333,6 @@
   <div>jqheguxqgj vhoisnaoiq svkedajeuc</div>
   <div>aksqrtgpsn kyfybvshkr nudqbqegux rlqmixphdw xcnqglhulr khnfhhwdrm yrddkhrxib tslxpuaigm</div>
   <div>ihsraelqve</div>
-  <div>vpdxscjgjp fnkfgwtyqa yigtxnuonb fowoksqiai nsfvofirxw oxnhkgbobp</div>
+  <div>vshoniwief lodhcdirky avngdstblx unxwfwbboy kmxvcrdbxi kaaopraqqk tdmdilxqjp rtjphaobjn jilqukxpvb</div>
 </body>
 </html>
