add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -404,5 +404,6 @@
   <div>cbrlhsryon keaoetyyrs pdwvitflsq dhvhimrmsp fbpewmcvkd icguckavaj ktrmsdllnl fqbkdemhmv</div>
   <div>mbvkjldvqo fxsjaeiofs hdcyvweomw dxptkxprmn</div>
   <div>vvorqucbjp orxmlbcwwc iwbgmhxbfv huyvtgwmxt</div>
+  <div>aogejikmfy wmmledvlsi ybaohajyag jepiburkmg iktfxbutbs</div>
 </body>
 </html>
