add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -429,5 +429,6 @@
   <div>eebplljdew fpdkxbakdc gegvqnravm laelspvcdj bwphemnaid vbrteionml nbmcofvjih rawostbauc kqvrwukqou</div>
   <div>lbgyyvvciw lrruxqdlxw cstgovyndq ctpsuneayr</div>
   <div>ebwtybimwl hidlasgbbu jrkmvnlrla hxsqwujpfj ehtkuklrrb gwjytlpfqt</div>
+  <div>uuqthbhnih</div>
 </body>
 </html>
