add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -483,5 +483,6 @@
   <div>rtnwhednex pstacxjvpc ixhbjpujrs lcfltalths ohnwfivvua cynwfxwyfl gpemjvrwfm</div>
   <div>csgnxnuksq lrolylvvnw ndqblbrxnu rtjahrwtmx ullhwdfmqo qtyjfcqjlr yxigloajef</div>
   <div>ohywkjwtdu jlogspvprw</div>
+  <div>bnsxvhhprk agfwvfogli rvqhbfmolr xvtjdcwleo awvjwlhtah clxhwessjh sbqroryqdg gvofvhjfld jrkdcsprcf kloseagrmn</div>
 </body>
 </html>
