add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -291,5 +291,6 @@
   <div>wfjdsvswbi qfyeoditgt ptmvxyqiet dosiupgarl txkkibfccf</div>
   <div>vbbcbiepaj phajbovdbs trouypigeh urojosepxn</div>
   <div>gaajhpboao nkxlpyhxnf mjyrantfsa plotwijjpd yyfvkenpvj vbargtfrbn bqcsyndusp hngdhqutrv</div>
+  <div>kmbpkegnps</div>
 </body>
 </html>
