add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -507,5 +507,6 @@
   <div>nykqbghuic qsxvjbnjtp iirrfauhpq jhaaoiktuj akstpkmodk</div>
   <div>vhehbmhlru mjrjcixeek lpelvkvega</div>
   <div>nxgkuynyds xlwqawhdvy</div>
+  <div>vciavniion fbpfdfkurw nfjnutbheg deigrnqcpx</div>
 </body>
 </html>
