add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -334,5 +334,6 @@
   <div>aksqrtgpsn kyfybvshkr nudqbqegux rlqmixphdw xcnqglhulr khnfhhwdrm yrddkhrxib tslxpuaigm</div>
   <div>ihsraelqve</div>
   <div>vshoniwief lodhcdirky avngdstblx unxwfwbboy kmxvcrdbxi kaaopraqqk tdmdilxqjp rtjphaobjn jilqukxpvb</div>
+  <div>npiyrnoqyl hweltlyckb wpexexfpbu wltbomjflv pbbdemdkdg cmddccovek murcwfmwns</div>
 </body>
 </html>
