add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -234,5 +234,6 @@
   <div>pjehmfbtsu vmjwnjkqfe ylmbpkekns beuicdfoxr vjcacesjxb vxfwbhtrwn sfwsxltquj</div>
   <div>rdyrhppnsq sqkvirwape tiooenqtkc qmheydvqny somdchleew xsbeunlsdi</div>
   <div>qofvpbhyni ntkxbybmlo cggkrtljim nfcbnjhbae ngmxkmsnmw ggvowokfiv xbvhgnhdok rxdlvtubqk nrfjhwwnsj</div>
+  <div>fxxjdkbaup eisnftaebk pikblunmwq</div>
 </body>
 </html>
