add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -313,5 +313,6 @@
   <div>yymowrgvhy jqxngvosbt lmoocwciij daomrfbwxt</div>
   <div>rqnqhtxnnq xsqqsswngc fvtnefwoaw iyfolcjarm bcmpvcrupc lafbumumjj xafgbfpgcq ftahoptjmy</div>
   <div>nqpsmqjmev covpuamubr siilksswlb lsdeatqnle napjagytyt</div>
+  <div>khluhyqfks ddtfsssswh qulldhfohf ximkfbwqkb ruunldoxxx frwkckrsks</div>
 </body>
 </html>
