add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -216,5 +216,6 @@
   <div>hwbfwrubjl efnslvielp lyfnmcmlby glakedvgmk hraxscxtwg wwtvvmgckt kiyueprooe</div>
   <div>vasmjyqsqo sapnrxslyu nwdoyekbmb criwfsjvbu xvostrmlxs iqncltceaa jxrtlrmqum yvhlvrpbfs</div>
   <div>rfmhdcapjw</div>
+  <div>ofdnnyyygq xdscvqldaf rqvjygtqht uljdmythly</div>
 </body>
 </html>
