add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -273,5 +273,6 @@
   <div>txvkmabyvj llfoynmpah petdsptlho hsanhntsve dhrnbwwkgm</div>
   <div>vxnqvhvpwt rjcqurpmym chpsvajgmt</div>
   <div>dllxgtmxxp bxnpmmvaxf euxlkauybu ebsrlfngly lxfrkffoid</div>
+  <div>mdiqrwjqac</div>
 </body>
 </html>
