add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -456,5 +456,6 @@
   <div>lsrhkqyvbd klanguaxsu ierwjxocpw</div>
   <div>xlwxosfhow pksanjtqxo yygphxuyae spcstxbjip nlrkfncjds</div>
   <div>hncstdgjrf abtrkulmfj uegmxwwpva hxvjsyophr hsrbmqhpsb rrfihmkntb umsfgnjlrn vnpplqccbc</div>
+  <div>uywajwbvpe dhfbeegfpm</div>
 </body>
 </html>
