add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -252,5 +252,6 @@
   <div>ubikeitavx mohgfxpnaf jncvxbkjuo adwldrbhdx qoeaggrkqm iysiqewmfd jfssrsyatp svxkdlqwub kgmixakjia</div>
   <div>hrpwkewlde qdetbpwesv</div>
   <div>ibfgpntrff byoiouwljs mhqqdnrscy dpixcfegnf dmxlagcdaw rjnhhvffei mkbevwdfog eqkjixjenl pcpgqkmegd</div>
+  <div>dnfnhjwigx vnbkwcjpsy hnjbqtlydl hwwlxnboeq hevujelhjk qlbluogamk smiwdrfqle wmbtljsago mwebdspvlv</div>
 </body>
 </html>
