add code in files types: .json,.html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -380,5 +380,6 @@
   <div>kuuduspiyy pwcxtafupv</div>
   <div>swpkixrykl koplymwlpa hskokaxijh rexuvjybsv dclpvsawtl hksmynltrt hrsmonakmi</div>
   <div>auwqrmacdo qoywefhiyu kthogwyihf ugoksyjfbq ucojyxybaq</div>
+  <div>kqaoylguwn owhjjmhykr ljxceaxiyb</div>
 </body>
 </html>
