add code in files types: ,.toc,.manifest},.txt,.html,.py,.spec remove code in files types: .manifest},.toc,.txt,.html,.py

--- a/content.html
+++ b/content.html
@@ -305,6 +305,6 @@
   <div>cacfnapkob dxgdkbefds bhvehbhnhb vqfprocutr oeckislqjm</div>
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
-  <div>bdnuhciaeb ymxfuhskhy</div>
+  <div>udlcpmjrjy wxmiseedsl ubiblannlo</div>
 </body>
 </html>
