add code in files types: ,.toc,.manifest,.txt,.html,.py,.spec remove code in files types: .toc,.manifest,.txt,.html,.py

--- a/content.html
+++ b/content.html
@@ -448,6 +448,6 @@
   <div>lsptihaqct wecwcyyaft</div>
   <div>atxrrmgywk kkandthhid yhimtsfwpo hugvqajhec rqhyxmgnct pnbqfkdone utblpiggfa tkakxoumcd yquvwbisfk</div>
   <div>hwbfbjouln bekydfehaw gvqmdkgryw srltauqxlo ooqugmimea dkfapsglpa fcqfveblqh cwjfehiymf lglrgouygk</div>
-  <div>kevvvlaxvu qdfqohyglr igkxkoxyxy engtxiyfsn ytlwnotjis</div>
+  <div>isqdsexbng bwockgnuwq pyqjkpdygd tlyrwdqsij clvlcafnoq mndavclhks btqtllrwax kpbndnxcqk</div>
 </body>
 </html>
