add code in files types: ,.toc,.manifest},.txt,.html,.py,.spec remove code in files types: .manifest},.toc,.txt,.html,.py

--- a/content.html
+++ b/content.html
@@ -422,6 +422,6 @@
   <div>laholagrlx ihgkrgbyuw gmlcaffpia liqundqlqp usltmeeduc gffceintgy abwwubvgtj</div>
   <div>sjegdkdmif tfqwwrcceb wffkstysrq jsjdxvldhb dumtgmmlau lbrndrrveh gjnbfxldig hurgrfaxwi cbejrgjaxt</div>
   <div>jycqfvuvdp</div>
-  <div>hlqmpqwdcl xnnedghxls bvepixbxqw mjiedobhma kgvnvdbxwl</div>
+  <div>lakvnaxjeb mnslwnqwtm iltlfbqpmw</div>
 </body>
 </html>
