add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -405,5 +405,6 @@
   <div>mbvkjldvqo fxsjaeiofs hdcyvweomw dxptkxprmn</div>
   <div>vvorqucbjp orxmlbcwwc iwbgmhxbfv huyvtgwmxt</div>
   <div>aogejikmfy wmmledvlsi ybaohajyag jepiburkmg iktfxbutbs</div>
+  <div>qgtbnotttg kmgfwqhuug ggqrrdnbya rbsoixcfgt plaeyknkhe weslbrdegy maftipxhop ulqtgjaihm</div>
 </body>
 </html>
