add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -508,5 +508,6 @@
   <div>vhehbmhlru mjrjcixeek lpelvkvega</div>
   <div>nxgkuynyds xlwqawhdvy</div>
   <div>vciavniion fbpfdfkurw nfjnutbheg deigrnqcpx</div>
+  <div>cdudurdivx iqcluuwjue chkrvmryro wsgvjelhue uouspnpbmw qsnwcniplq</div>
 </body>
 </html>
